# wire_frame_rs

./: .gitignore  Cargo.toml  README.md  build.rs
src/: application.rs  axes.rs  axis.rs  main.rs  shape3d.rs  tri.rs  world_axes.rs  world_axis.rs
src/application/: axes.rs  shape3d.rs
